--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
     <title>Web Calculator</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
-    <h1>Web Calculator</h1>
     <form action="/calculate" method="post">
+    <h1>Web Calculator</h1>
+
         <label for="num1">Enter the first number:</label>
         <input type="text" name="num1" required><br>
         <label for="num2">Enter the second number:</label>
