added requirements file

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
     <form action="/calculate" method="post">
     <h1>Web Calculator</h1>
 
-        <label for="num1">Enter the first number:</label>
+        <label for="num1">1st digit of aspect ratio:</label>
         <input type="text" name="num1" required><br>
-        <label for="num2">Enter the second number:</label>
+        <label for="num2">2nd digit of aspect ratio:</label>
         <input type="text" name="num2" required><br>
-        <label for="num3">Enter the third number:</label>
+        <label for="num3">Pixel Volume(Megapixel Total):</label>
         <input type="text" name="num3" required><br>
         <input type="submit" value="Calculate">
     </form>
